python/tests/testreport/00002_test_report_23_07_2025_12_00_26.txt
========================================
Testbericht
Datum und Uhrzeit: 23_07_2025_12_00_26
========================================

Geladene Testmodule:

unittest.case.FunctionTestCase (<lambda>) ... ERROR
unittest.case.FunctionTestCase (<lambda>) ... ERROR

======================================================================
ERROR: unittest.case.FunctionTestCase (<lambda>)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/tub/App/python/tests_runner.py", line 36, in <lambda>
    ImportError(f"Modul {modulename} konnte nicht geladen werden: {e}")
                                                                   ^
NameError: name 'e' is not defined

======================================================================
ERROR: unittest.case.FunctionTestCase (<lambda>)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/tub/App/python/tests_runner.py", line 36, in <lambda>
    ImportError(f"Modul {modulename} konnte nicht geladen werden: {e}")
                                                                   ^
NameError: name 'e' is not defined

----------------------------------------------------------------------
Ran 2 tests in 0.004s

FAILED (errors=2)
